# guru

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cli.yml  data.json  guru.net
config/: cli.yml
data/: data.json  data_12.json  data_orig.json
docs/: guide.md
docs/guide/: cross_validation.md  ensemble_models.md
src/: features.rs  generators.rs  lib.rs  main.rs
src/models/: mod.rs
src/neural/nn/: mod.rs
src/utils/: generators.rs  mod.rs
