[package]
name = "guru"
version = "0.1.0"
authors = ["aspera-non-spernit <g.s.d>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
nn = "0.1.6"
rand = "0.7.2"
rustc-serialize = "0.3.24"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
time = "0.1.42"
